--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "~1", features = ["full"] }
-zerocopy = { version = "0.7.31", features = ["derive", "byteorder"] }
-byteorder = "1.5.0"
-rand = "0.9.0-alpha.0"
+zerocopy = { version = "0.7", features = ["derive", "byteorder"] }
+byteorder = "1"
+rand = "0.8"
